<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/lblnoteTitle"
            android:layout_width="wrap_content"
            android:gravity="right"/>
        <EditText
        	android:id="@+id/noteTitle"
            android:width="200dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/lblnotePriority"
            android:layout_width="wrap_content"
            android:gravity="right"/>
        <Spinner
        	android:id="@+id/notePriority"
            android:width="200dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/lblnoteDueDate"
            android:layout_width="wrap_content"
            android:gravity="right"/>
        <TextView
            android:id="@+id/noteDueDate"
            android:textSize="20dp"
            android:width="200dp"
            android:gravity="center"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/lblnoteDescription"
            android:layout_width="wrap_content"
            android:gravity="right"/>
        <EditText
        	android:id="@+id/noteDescription"
            android:width="200dp"/>
    </TableRow>
    
	<TableRow>
        <Button
        	android:id="@+id/btnCreatenote"
            android:layout_column="1"
            android:text="@string/btnOk"
            android:layout_width="wrap_content"
            android:gravity="right"/>
        <Button
        	android:id="@+id/btnCancelCreatenote"
            android:text="@string/btnCancel"
            android:layout_width="wrap_content"
            android:gravity="left"/>
    </TableRow>
</TableLayout>